Clean code, reformat